--- a/thesis/index.html
+++ b/thesis/index.html
@@ -1423,7 +1423,7 @@ class="citation" data-cites="Yabuuchi2014">(Yabuuchi et al.
 </ul>
 <div class="center">
 <figure>
-<embed width="100%" height="500px"src="img/Radar_plot_materials.html" id="fig:radar" />
+<embed width="100%" height="500px" src="img/Radar_plot_materials.html" id="fig:radar" />
 <figcaption aria-hidden="true">Overview of the suitability of battery
 charge carriers. The data behind the graph is included in the
 appendix.</figcaption>
@@ -1449,7 +1449,7 @@ example metal fluorides.<span class="citation"
 data-cites="Hartman2020">(Hartman and Mishra 2020)</span></p>
 <div class="center">
 <figure>
-<embed width="100%" height="500px" src="img/Volumetric_overview.svg" id="fig:Volumetric_overview" />
+<embed width="100%" height="500px"  src="img/Volumetric_overview.svg" id="fig:Volumetric_overview" />
 <figcaption aria-hidden="true">Overview of theoretical energy densities
 for various types of battery technologies that are being researched.
 Adapted from <span class="citation" data-cites="Nowroozi2021">Nowroozi
@@ -1466,7 +1466,7 @@ the opposite direction as the electrons, unlike for the positively
 charged lithium ion.</p>
 <div class="center">
 <figure>
-<embed width="100%" height="500px" src="img/FIB_discharge.svg" id="fig:FIB_diagram" />
+<embed width="100%" height="500px"  src="img/FIB_discharge.svg" id="fig:FIB_diagram" />
 <figcaption aria-hidden="true">Diagram of FIB during discharge. Adapted
 from <span class="citation" data-cites="de2015failure">(De Boer
 2015)</span><span class="citation" data-cites="Reddy2011">(Reddy and
@@ -1710,7 +1710,7 @@ DFT may have an error of up to 0.3 V.<span class="citation"
 data-cites="Allam2018">(Allam et al. 2018)</span></p>
 <h4 id="the-convex-hull-graph">The convex hull graph</h4>
 <figure>
-<embed width="100%" height="500px" src="img/Convex_hull_example.svg"/>
+<embed width="100%" height="500px"  src="img/Convex_hull_example.svg"/>
 <figcaption aria-hidden="true">Example of a convex hull graph. In this
 case, the phase is the only stable intermediate, as the other phases are
 above the hull line by the distance indicated by the arrows. This
@@ -1928,7 +1928,7 @@ data-reference="fluoride_capacity_references">1.4</a>, the values
 correspond to the literature reported theoretical capacities, except for
 , where the discrepancy could not be explained.</p>
 <figure>
-<embed width="100%" height="500px" src="img/Reference_data_plot_Li.html" id="lithium_references" />
+<embed width="100%" height="500px"  src="img/Reference_data_plot_Li.html" id="lithium_references" />
 <figcaption aria-hidden="true">Comparison with reference values for
 lithium. Experimental data from <span class="citation"
 data-cites="Zhang2015">Y. Zhang et al. (2015)</span> (), <span
@@ -1940,7 +1940,7 @@ class="citation" data-cites="Hautier2016">Hautier
 (2016)</span></figcaption>
 </figure>
 <figure>
-<embed width="100%" height="500px" src="img/Reference_data_plot_F.html" id="fluoride_references" />
+<embed width="100%" height="500px"  src="img/Reference_data_plot_F.html" id="fluoride_references" />
 <figcaption aria-hidden="true">Reference voltages were also plotted for
 FIB from literature. Theoretical potential values from <span
 class="citation" data-cites="Amatucci2007">Amatucci and Pereira
@@ -1948,7 +1948,7 @@ class="citation" data-cites="Amatucci2007">Amatucci and Pereira
 Galatolo, and Pasta (2021)</span>.</figcaption>
 </figure>
 <figure>
-<embed width="100%" height="500px" src="img/Reference_data_plot_mah_F.html"
+<embed width="100%" height="500px"  src="img/Reference_data_plot_mah_F.html"
 id="fluoride_capacity_references" />
 <figcaption aria-hidden="true">Comparison with literature values for
 metal fluoride electrode capacities.Theoretical capacity values from
@@ -2064,7 +2064,7 @@ materials found in the figure are not particularly usable, for example
 would form metallic potassium upon defluorination, which is highly
 reactive, is a toxic material and is a very expensive material.</p>
 <figure>
-<embed width="100%" height="500px" src="img/Volume_change_F.html" id="fig:volume_change" />
+<embed width="100%" height="500px"  src="img/Volume_change_F.html" id="fig:volume_change" />
 <figcaption aria-hidden="true">Volume change between the fluorinated and
 unfluorinated phase is also an important consideration, this graph shows
 this volume change, and how it would discount many of the materials that
@@ -2072,7 +2072,7 @@ combine a suitable potential and high capacity. The marked horizontal
 area denotes the voltage range of the proposed electrolyte.</figcaption>
 </figure>
 <figure>
-<embed width="100%" height="500px" src="img/Volume_change_BaSnF4_band.html"
+<embed width="100%" height="500px"  src="img/Volume_change_BaSnF4_band.html"
 id="volume_change_subset" />
 <figcaption aria-hidden="true">Zooming in on the marked voltage range
 and limiting the plot to only materials with a volume change under 100%
@@ -2100,18 +2100,18 @@ stability window of the electrolyte are shown by formula in figure <a
 href="#fig:number_of_steps_band" data-reference-type="ref"
 data-reference="fig:number_of_steps_band">1.9</a>.</p>
 <figure>
-<embed width="100%" height="500px" src="img/Data_voltage_steps_F.html"
+<embed width="100%" height="500px"  src="img/Data_voltage_steps_F.html"
 id="fig:data_voltage_steps_F_selected" />
 <figcaption aria-hidden="true">This figure shows the equilibrium voltage
 profiles of some metal fluorides.</figcaption>
 </figure>
 <figure>
-<embed width="100%" height="500px" src="img/Number_of_steps_F.html" id="fig:number_of_steps" />
+<embed width="100%" height="500px"  src="img/Number_of_steps_F.html" id="fig:number_of_steps" />
 <figcaption aria-hidden="true">The number of voltage plateau steps
 plotted for all materials with at least 2 steps.</figcaption>
 </figure>
 <figure>
-<embed width="100%" height="500px" src="img/Number_of_steps_BaSnF4_band.html"
+<embed width="100%" height="500px"  src="img/Number_of_steps_BaSnF4_band.html"
 id="fig:number_of_steps_band" />
 <figcaption aria-hidden="true">The number of voltage plateau steps
 plotted for all materials with at least 2 steps, zoomed in around the
@@ -2146,7 +2146,7 @@ of zero does not necessarily correspond to a material that can be easily
 synthesized. Nevertheless, the identification of and confirms that the
 results provided do correspond to real-world performance.</p>
 <figure>
-<embed width="100%" height="500px" src="img/Volume_change_band_volume_combined.html"
+<embed width="100%" height="500px"  src="img/Volume_change_band_volume_combined.html"
 id="fig:combined_all" />
 <figcaption aria-hidden="true">The volume change plotted for all
 materials with at least 2 steps, zoomed in around the stability window
@@ -2183,7 +2183,7 @@ data-reference="fig:pseudointercalation">1.13</a> the materials with
 matching space groups are plotted by volume change, voltage and
 capacity.</p>
 <figure>
-<embed width="100%" height="500px" src="img/Space_groups_hist_F.html" id="spacegroup_occurrence" />
+<embed width="100%" height="500px"  src="img/Space_groups_hist_F.html" id="spacegroup_occurrence" />
 <figcaption aria-hidden="true">The occurence of space groups for the
 fluorinated materials compared to occurrence of space groups over all
 known materials. Reference data from <span class="citation"
@@ -2191,7 +2191,7 @@ data-cites="Urusov2009">Urusov and Nadezhina (2009)</span>.</figcaption>
 </figure>
 <div class="center">
 <figure>
-<embed width="100%" height="500px" src="img/Same_space_groups_F.html" id="fig:same_spacegroup"
+<embed width="100%" height="500px"  src="img/Same_space_groups_F.html" id="fig:same_spacegroup"
 style="width:80.0%" />
 <figcaption aria-hidden="true">The occurence of half reaction pairs that
 share the same space group in fluorinated and fully defluorinated
@@ -2199,7 +2199,7 @@ form.</figcaption>
 </figure>
 </div>
 <figure>
-<embed width="100%" height="500px" src="img/Spacegroup_match_volume_change_F.html"
+<embed width="100%" height="500px"  src="img/Spacegroup_match_volume_change_F.html"
 id="fig:pseudointercalation" />
 <figcaption aria-hidden="true">The half-reaction pairs that have the
 same space group, coloured by volume change.</figcaption>
@@ -2263,7 +2263,7 @@ of and . The palladium fluorides are not relevant, palladium is a very
 expensive metal.</p></li>
 </ul>
 <figure>
-<embed width="100%" height="500px" height="500px"src="img/Ptable_categories_plot_F_all.html" />
+<embed width="100%" height="500px" src="img/Ptable_categories_plot_F_all.html" />
 <figcaption aria-hidden="true">Plot of all retrieved binary and ternary
 fluoride compounds, plotted by periodic table category. Click on the legend to show/hide categories.</figcaption>
 </figure>
@@ -2277,42 +2277,42 @@ data-cites="blank_ptable">(Cepheus and InverseHypercube
 </figure>
 </div>
 <figure>
-<embed width="100%" height="500px" height="500px"src="img/Ptable_categories_plot_F_Transition_metals.html"
+<embed width="100%" height="500px" src="img/Ptable_categories_plot_F_Transition_metals.html"
 id="fig:transmetals" />
 <figcaption aria-hidden="true">Subset of transition metal fluorides
 plotted.</figcaption>
 </figure>
 <figure>
-<embed width="100%" height="500px" height="500px"src="img/Ptable_categories_plot_F_oxides.html" />
+<embed width="100%" height="500px" src="img/Ptable_categories_plot_F_Oxides.html" />
 <figcaption aria-hidden="true">Subset of fluoride oxides
 plotted.</figcaption>
 </figure>
 <figure>
-<embed width="100%" height="500px" height="500px"src="img/Ptable_categories_plot_F_Carbon_group.html" />
+<embed width="100%" height="500px" src="img/Ptable_categories_plot_F_Carbon_group.html" />
 <figcaption aria-hidden="true">Subset of carbon group fluorides
 plotted.</figcaption>
 </figure>
 <figure>
-<embed width="100%" height="500px" height="500px"src="img/Ptable_categories_plot_F_Post-transition_metals.html" />
+<embed width="100%" height="500px" src="img/Ptable_categories_plot_F_Post-transition_metals.html" />
 <figcaption aria-hidden="true">Subset of post-transition metal fluorides
 plotted.</figcaption>
 </figure>
 <figure>
-<embed width="100%" height="500px" height="500px"src="img/Ptable_categories_plot_F_Nitrogen_family.html" />
+<embed width="100%" height="500px" src="img/Ptable_categories_plot_F_Nitrogen_family.html" />
 <figcaption aria-hidden="true">Subset of nitrogen-group fluorides
 plotted.</figcaption>
 </figure>
 <figure>
-<embed width="100%" height="500px" height="500px"src="img/Ptable_categories_plot_F_Lanthanides.html" />
+<embed width="100%" height="500px" src="img/Ptable_categories_plot_F_Lanthanides.html" />
 <figcaption aria-hidden="true">Subset of lanthanide fluorides plotted.</figcaption>
 </figure>
 <figure>
-<embed width="100%" height="500px" height="500px"src="img/Ptable_categories_plot_F_Alkali_metals.html" />
+<embed width="100%" height="500px" src="img/Ptable_categories_plot_F_Alkali_metals.html" />
 <figcaption aria-hidden="true">Subset of alkali metal fluorides
 plotted.</figcaption>
 </figure>
 <figure>
-<embed width="100%" height="500px" height="500px"src="img/Ptable_categories_plot_F_Alkaline_earth_metals.html"
+<embed width="100%" height="500px" src="img/Ptable_categories_plot_F_Alkaline_earth_metals.html"
 id="fig:alkearthmetals" />
 <figcaption aria-hidden="true">Subset of alkaline earth metal fluorides
 plotted.</figcaption>
@@ -2341,13 +2341,13 @@ findings by <span class="citation" data-cites="Gschwind2016">F. Gschwind
 (2016)</span>, who found capacities of up to around 5000 Wh/L and 850
 Wh/kg for a smaller dataset of binary fluorides.</p>
 <figure>
-<embed width="100%" height="500px" height="500px"src="img/Ptable_categories_metric_density_F.html"
+<embed width="100%" height="500px" src="img/Ptable_categories_metric_density_F.html"
 id="fig:vol_vs_gravi" />
 <figcaption aria-hidden="true">Volumetric versus gravimetric density
 plot for single electrodes.</figcaption>
 </figure>
 <figure>
-<embed width="100%" height="500px" src="img/Complete_cell.html" id="fig:vol_vs_gravi_full" />
+<embed width="100%" height="500px"  src="img/Complete_cell.html" id="fig:vol_vs_gravi_full" />
 <figcaption aria-hidden="true">Volumetric versus gravimetric density
 plot for all combinations of electrodes. <a href="complete_cell.csv" target="_blank">Full data (.csv)</a>.</figcaption>
 </figure>
@@ -2768,36 +2768,36 @@ data-reference="kim_1991">2.1</a>. The intermediates are very close to
 the hull and thus likely possible to synthesize.</p>
 <div class="center">
 <figure>
-<img width="100%" height="500px" src="img/Convex_hull_BiSnF_subplots.svg" />
+<img width="100%" height="500px"  src="img/Convex_hull_BiSnF_subplots.svg" />
 <figcaption aria-hidden="true">Separate convex hulls for <span
 class="math inline"><em>x</em></span> in </figcaption>
 </figure>
 <figure>
-<img width="100%" height="500px" src="img/Convex_hull_BiSnF.svg" />
+<img width="100%" height="500px"  src="img/Convex_hull_BiSnF.svg" />
 <figcaption aria-hidden="true">Combined convex hull for .</figcaption>
 </figure>
 </div>
 <div class="center">
 <figure>
-<img width="100%" height="500px" src="img/Convex_hull_BiBaF_subplots.svg" />
+<img width="100%" height="500px"  src="img/Convex_hull_BiBaF_subplots.svg" />
 <figcaption aria-hidden="true">Separate convex hulls for <span
 class="math inline"><em>x</em></span> in </figcaption>
 </figure>
 </div>
 <div class="center">
 <figure>
-<img width="100%" height="500px" src="img/Convex_hull_BiBaF.svg" />
+<img width="100%" height="500px"  src="img/Convex_hull_BiBaF.svg" />
 <figcaption aria-hidden="true">Combined convex hull for .</figcaption>
 </figure>
 </div>
 <div class="center">
 <figure>
-<img width="100%" height="500px" src="img/Convex_hull_BiPbF_subplots.svg" />
+<img width="100%" height="500px"  src="img/Convex_hull_BiPbF_subplots.svg" />
 <figcaption aria-hidden="true">Separate convex hulls for <span
 class="math inline"><em>x</em></span> in </figcaption>
 </figure>
 <figure>
-<img width="100%" height="500px" src="img/Convex_hull_BiPbF.svg" />
+<img width="100%" height="500px"  src="img/Convex_hull_BiPbF.svg" />
 <figcaption aria-hidden="true">Combined convex hull for .</figcaption>
 </figure>
 </div>
